--- a/index.html
+++ b/index.html
@@ -1,9 +1,60 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Hello World</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Simple Colored Page</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f8ff; /* Light blue background */
+            color: #333; /* Dark gray text */
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #4CAF50; /* Green header */
+            color: white;
+            padding: 20px;
+            text-align: center;
+        }
+        main {
+            padding: 20px;
+        }
+        .content {
+            background-color: #ffebcd; /* Blanched almond background for content */
+            padding: 15px;
+            border-radius: 5px;
+        }
+        footer {
+            background-color: #333; /* Dark gray footer */
+            color: white;
+            text-align: center;
+            padding: 10px;
+            position: fixed;
+            width: 100%;
+            bottom: 0;
+        }
+    </style>
 </head>
 <body>
-    <h1>Hello, World!</h1>
+
+    <header>
+        <h1>Welcome to My Simple Page</h1>
+    </header>
+
+    <main>
+        <div class="content">
+            <h2>Sample Content</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur consequat, nisl sit amet sodales consequat, libero odio iaculis velit, a dapibus nisi ante non eros. Integer euismod odio vel erat dictum, at laoreet erat auctor.</p>
+            <p>Nulla facilisi. Sed et ultricies lectus, vel dapibus urna. Quisque auctor eros eu nulla tincidunt, id volutpat erat eleifend. Nam volutpat, felis a aliquet venenatis, augue enim condimentum nisi, nec convallis arcu ante nec risus.</p>
+        </div>
+    </main>
+
+    <footer>
+        <p>© 2024 Simple Page</p>
+    </footer>
+
 </body>
 </html>
+
