--- a/index.html
+++ b/index.html
@@ -1,19 +1,38 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>This Abdishakur's web page</title>
-        <style>
-            img {
-                width: 100px;
-                border: ;
-            }
-        </style>
-    </head>
-    <body>
-        <img src="Ahmed.png">
-        <p>Abdishakur450@gmail.com</p>
-        <p>I love to teach you HTML!</p>
-
-        
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My First Website</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Welcome to My First Website!</h1>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+    <main>
+        <section id="home">
+            <h2>Home Section</h2>
+            <p>This is the home section of the website.</p>
+        </section>
+        <section id="about">
+            <h2>About Section</h2>
+            <p>Information about the website.</p>
+        </section>
+        <section id="contact">
+            <h2>Contact Section</h2>
+            <p>Contact details go here.</p>
+        </section>
+    </main>
+    <footer>
+        <p> &copy; 2025 - My First Website</p>
+    </footer>
+</body>
 </html>
