--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         </section>
         <section id="about">
             <h2>About Section</h2>
-            <p>Information about the website.</p>
+            <p>Information about Abdishakur's website.</p>
         </section>
-        <section id="contact">
+        <section id="contact abdishakur450@gmail.com">
             <h2>Contact Section</h2>
             <p>Contact details go here.</p>
         </section>
@@ -36,39 +36,3 @@
     </footer>
 </body>
 </html>
-body {
-    font-family: Arial, sans-serif;
-    line-height: 1.6;
-    margin: 0;
-    padding: 0;
-}
-header {
-    background: #333;
-    color: #fff;
-    padding: 10px 0;
-    text-align: center;
-}
-nav ul {
-    list-style: none;
-    padding: 0;
-}
-nav ul li {
-    display: inline;
-    margin: 0 10px;
-}
-nav ul li a {
-    color: #333;
-    text-decoration: none;
-}
-section {
-    padding: 20px;
-}
-footer {
-    background: #333;
-    color: #fff;
-    text-align: center;
-    padding: 10px 0;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-}
