--- a/index.html
+++ b/index.html
@@ -3,36 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My First Website</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Abdishakur's Website</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+        #container {
+            text-align: center;
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <h1>Welcome to My First Website!</h1>
-    </header>
-    <nav>
-        <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </nav>
-    <main>
-        <section id="home">
-            <h2>Home Section</h2>
-            <p>This is the home section of the website.</p>
-        </section>
-        <section id="about">
-            <h2>About Section</h2>
-            <p>Information about Abdishakur's website.</p>
-        </section>
-        <section id="contact abdishakur450@gmail.com">
-            <h2>Contact Section</h2>
-            <p>Contact details go here.</p>
-        </section>
-    </main>
-    <footer>
-        <p> &copy; 2025 - My First Website</p>
-    </footer>
+    <div id="container">
+        <h1>Hello, World!</h1>
+        <p>Welcome to my first website.</p>
+    </div>
 </body>
 </html>
