--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <header>
-        <h1>Somaliyaict.com</h1>
+        <h1></h1>
         <nav>
             <ul>
-                <li><a href="#about">this course is about to study html and css</a></li>
-                <li><a href="#projects">Projects</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#projects">building my first web page </a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
@@ -37,7 +37,7 @@
     
     <section id="contact">
         <h2>Contact</h2>
-        <p>You can reach me at <a href="mailto:abdishakur450@gmail.com">example@example.com</a>.</p>
+        <p>You can reach me at <a href="abdishakur450@gmail.com">example@example.com</a>.</p>
     </section>
     
     <footer>
