--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
         <P>WELCOME MY FIRST WEB PAGE <em>SOMALIYAICT.COM</em></P>
         <h1>Computer Networking and Cyber Security</h1>
         <a href="https://www.somaliyaict.com">Somaliyaict.com</a>
-        <h2>page1</h2>
-        <h3>page2</h3>
-        <h4>pge3</h4>
-        <h5>page4</h5>
-        <h6>page5</h6>
+        <h2>page1 NETWORKING</h2>
+        <h3>page2 COMPUTER</h3>
+        <h4>pge3  STORAGE</h4>
+        <h5>page4 SUBNETTING</h5>
+        <h6>page5 CONFIGURATION</h6>
 
         <ul>
             <li>Computing</li>
@@ -25,7 +25,11 @@
         </ol>
         <span>I AM THE EDITOR <br>OF MY OWN WEB PAGE</span>
         <hr>
-        <img src="Screenshot-1.png" alt="">
+        <img src="Screenshot-1.png" alt="">"a picture of a Screenshot-1"
+        <blockquote> cite "https://www.somaliyaict.com"
+            We are all the gutter,but some of us are looking at the stars
+         </blockquote>
+         <p> style="colour: orange;">style me:)</p>
     </body>
 </head>
 </html>
