--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
         </ul>
         <ol>
             <li>Elastick Computer</li>
-            <li>Lambda</li>
-            <li>vpc</li>
+            <li>LAMBDA</li>
+            <li>VPC</li>
+            <li> VMWARE WORK-STATION</li>
         </ol>
         <span>I AM THE EDITOR <br>OF MY OWN WEB PAGE</span>
         <hr>
