--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <h4>pge3  STORAGE</h4>
         <h5>page4 SUBNETTING</h5>
         <h6>page5 CONFIGURATION</h6>
+        <h7>page6 Network Administrator by Abdishakur </h7>
 
         <ul>
             <li>Computing</li>
