--- a/index.html
+++ b/index.html
@@ -1,39 +1,60 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title> Learning HTML</title>
-    <body>
-                           <P>Hello <strong>AWS ENGINEERS AND WELCOME MY HTML AND CSS CRASH COURSE</strong></P> 
-
-        
-        <P>WELCOME MY FIRST WEB PAGE <em>SOMALIYAICT.COM</em></P>
-        <h1>Computer Networking and Cyber Security</h1>
-        <a href="https://www.somaliyaict.com">Somaliyaict.com</a>
-        <h2>page1 NETWORKING</h2>
-        <h3>page2 COMPUTER</h3>
-        <h4>pge3  STORAGE</h4>
-        <h5>page4 SUBNETTING</h5>
-        <h6>page5 CONFIGURATION</h6>
-        <h7>page6 Network Administrator by Abdishakur </h7>
-
-        <ul>
-            <li>Computing</li>
-            <li>Networking</li>
-            <li>Storage</li>
-        </ul>
-        <ol>
-            <li>Elastick Computer</li>
-            <li>LAMBDA</li>
-            <li>VPC</li>
-            <li> VMWARE WORK-STATION</li>
-        </ol>
-        <span>I AM THE EDITOR <br>OF MY OWN WEB PAGE</span>
-        <hr>
-        <img src="Screenshot-1.png" alt="">"a picture of a Screenshot-1"
-        <blockquote> cite "https://www.somaliyaict.com"
-            We are all the gutter,but some of us are looking at the stars
-         </blockquote>
-         <p> style="colour: orange;">style me:)</p>
-    </body>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>IT Solutions</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#blog">Blog</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    
+    <section id="home">
+        <h1>Welcome to IT Solutions</h1>
+        <p>Your partner in solving all your tech challenges.</p>
+    </section>
+
+    <section id="services">
+        <h2>Our Services</h2>
+        <ul>
+            <li>Network Setup & Maintenance</li>
+            <li>Cloud Computing Solutions</li>
+            <li>IT Consultation</li>
+            <li>Cybersecurity Services</li>
+        </ul>
+    </section>
+
+    <section id="blog">
+        <h2>Latest Blog Posts</h2>
+        <ul>
+            <li><a href="#">How to Protect Your Data from Cyber Threats</a></li>
+            <li><a href="#">Understanding Cloud Computing</a></li>
+            <li><a href="#">Top 5 Programming Languages to Learn in 2025</a></li>
+        </ul>
+    </section>
+
+    <section id="contact">
+        <h2>Contact Us</h2>
+        <p>If you have any questions, feel free to reach out!</p>
+        <form>
+            <input type="text" placeholder="Your Name">
+            <input type="email" placeholder="Your Email">
+            <textarea placeholder="Your Message"></textarea>
+            <button type="submit">Submit</button>
+        </form>
+    </section>
+
+    <footer>
+        <p>&copy; 2025 IT Solutions</p>
+    </footer>
+</body>
 </html>
