--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
     
     <section id="home">
-        <h1>Welcome to IT Solutions</h1>
+        <h1>Welcome to IT Solutions and Cloud Security </h1>
         <p>Your partner in solving all your tech challenges.</p>
     </section>
 
@@ -37,7 +37,7 @@
         <h2>Latest Blog Posts</h2>
         <ul>
             <li><a href="#">How to Protect Your Data from Cyber Threats</a></li>
-            <li><a href="#">Understanding Cloud Computing</a></li>
+            <li><a href="#">Understanding Cloud Computinga and network security fundamental</a></li>
             <li><a href="#">Top 5 Programming Languages to Learn in 2025</a></li>
         </ul>
     </section>
