Add personalized message in footer
Updated footer to include a personalized message.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 IT Solutions</p>
+        <p>&copy; 2025 IT Solutions for my wife Nameah</p>
     </footer>
 </body>
 </html>
+
