--- a/index.html
+++ b/index.html
@@ -209,7 +209,8 @@
     </div>
 
     <footer>
-        <p>&copy; 2025 Cybersecurity Education Hub. All rights reserved. | Designed for Students</p>
+        <p>&copy; 2025 Cybersecurity Education Hub. All rights reserved.BY ABDISHAKUR MOHAMED OSMAN-ANOLE- | Designed for Students</p>
     </footer>
 </body>
 </html>
+
