Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -209,8 +209,9 @@
     </div>
 
     <footer>
-        <p>&copy; 2025 Cybersecurity Education Hub. All rights reserved.BY ABDISHAKUR MOHAMED OSMAN-ANOLE- | Designed for Students</p>
+        <p>&copy; 2025 Cybersecurity Education Hub. All rights reserved BY ABDISHAKUR MOHAMED OSMAN-ANOLE- | Designed for Students</p>
     </footer>
 </body>
 </html>
+
 
